Fix release column vertical alignment

--- a/webroot/css/style.scss
+++ b/webroot/css/style.scss
@@ -65,6 +65,10 @@ div.release {
         width: 100%;
     }
 
+    td {
+        vertical-align: top;
+    }
+
     .graphics_col_double {
         width: 420px;
 
